<resources>
    <string name="app_name">first-apps</string>
    <string name="rabbit_view">rabbit_view</string>
    <string name="app_title">FIRST-APPS</string>
    <string name="back">返回</string>
    <string name="login_view">LOGIN_VIEW</string>
    <string name="login_name">用户名</string>
    <string name="login_pwd">密码</string>
    <string name="frame_view">frame_view</string>
    <string name="Red">红色</string>
    <string name="green">绿色</string>
    <string name="orange">橙色</string>
    <string name="relative_msg">发现有Widget的新版本，您想现在就安装吗？</string>
    <string name="relative_view">relative_view</string>

</resources>
